public/css/app.css
body {
  font-family: Arial, Helvetica, sans-serif;
  margin: 0;

  box-sizing: border-box;
  background-image: url("https://coolbackgrounds.io/images/backgrounds/index/sea-edge-79ab30e2.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
}

body::before {
  content: "";
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.2);
}

/* NAV BAR */
.navbar {
  background-color: #484848;
  overflow: hidden;
}

.navbar .navbar-nav .nav-link {
  color: #fff;
}

.navbar .navbar-nav .nav-link:hover {
  color: #fbc531;
}

.navbar .navbar-nav .active>.nav-link {
  color: #fbc531;
}

footer a.text-light:hover {
  color: #fed136 !important;
  text-decoration: none;
}

footer .cizgi {
  border-right: 1px solid #535e67;
}

@media (max-width: 992px) {
  footer .cizgi {
    border-right: none;
  }
}



/* Carousel */

.carousel-item {
  height: 30rem;
  background: #000;
  border-radius: 3%;
}

.carousel-item img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 3%;
}

.carousel-item h5 {
  font-size: 40px;
}

.carousel-item img {
  opacity: 0.5;
}

/* COUNTDOWN TIMER */

@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');

.main {
  height: 100vh;
  background-size: cover;
  background: url('https://i.ibb.co/jfLZFhm/Bitmap.png') no-repeat top center;
}

h1 {
  text-align: center;
  font-weight: 400;
  font-size: 60px;
  padding-top: 30px;
}

.countdown {
  display: flex;
  justify-content: center;
  gap: 20px;
}

.countdown>div {
  display: flex;
  flex-wrap: nowrap;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 50px;
  box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.25);
  width: 80px;
  height: 80px;
  border-radius: 5px;
}

.number {
  font-weight: 500;
  font-size: 44px;
  color: #fbc531;
}

div span:last-of-type {
  font-size: 12px;
}

@media screen and (max-width:600px) {
  h1 {
    font-size: 40px;
  }

  .countdown {
    gap: 10px;
  }

  .countdown>div {
    width: 60px;
    height: 80px;
  }

  .number {
    font-size: 34px;
  }
}

/* .container-other-events as inline grid */
.container-other-events {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  grid-gap: 1rem;
  margin: 0 auto;
  padding: 5 1rem;
}

/* OTHER EVENTS CONTAINER */
.event-card {
  width: 300px;
  height: 200px;
  background-color: #333;
  border-radius: 10px;
  outline: 1px solid rgba(255, 255, 255, .5);
  outline-offset: -8px;
  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
  position: relative;
  overflow: hidden;
}

.card-image {
  position: absolute;
  inset: 0;
  z-index: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  transition: transform 1.2s;
  opacity: 0.4;
}

.event-card:hover .card-image {
  transform: scale(1.10);
  opacity: 0.5;

}

.card-title {
  color: #fff;
  position: absolute;
  left: 15px;
  bottom: 15px;
  font-size: 22px;
  text-shadow: 0 0 1 rgba(0, 0, 0, 0.1);
  font-weight: bold;
  opacity: 1;
}

/* EVENT PAGE */

#event-content {
  position: relative;
  margin-top: 2rem;
  --bs-bg-opacity: .7;
  border-radius: 5%;
}

#event-content img {
  position: absolute;
  top: 0px;
  right: 0px;
  z-index: -1;
  width: 100%;
}

#event-content button {
  position: absolute;
  top: 2rem;
  right: 2rem;
  width: 12rem;
  height: 3.5rem;
}

#event-content h1,
h3 {
  color: #fff;
  position: absolute;
}

#event-content h3 {
  font-size: 1.5rem;
  top: 8rem;
  left: 2rem;
}

#event-content h1 {
  font-size: 4rem;
  top: 1rem;
  left: 1.7rem;
}

/* Event Page Sidebar */
.sidebar-nav {
  position: absolute;
  top: 6.5rem;
  left: 3rem;
  width: 10rem;
  margin: 0;
  padding: 0;
  list-style: none;
  background: rgba(48, 47, 47, 0.8);
  border-radius: 5%;
}

.sidebar-nav li {
  text-indent: 20px;
  line-height: 40px;
}

.sidebar-nav li a {
  display: block;
  text-decoration: none;
  color: #999999;
}

.sidebar-nav li a:hover {
  text-decoration: none;
  color: #fff;
  background: rgba(251, 197, 49, 0.2)
}

.sidebar-nav li a:active,
.sidebar-nav li a:focus {
  text-decoration: none;
}

.sidebar-nav>.sidebar-brand {
  height: 65px;
  font-size: 18px;
  line-height: 60px;
}

@media(min-width:768px) {
  #wrapper {
    padding-left: 250px;
  }

  #wrapper.toggled {
    padding-left: 0;
  }

  #sidebar-wrapper {
    width: 250px;
  }

  #wrapper.toggled #sidebar-wrapper {
    width: 0;
  }

  #page-content-wrapper {
    padding: 20px;
    position: relative;
  }

  #wrapper.toggled #page-content-wrapper {
    position: relative;
    margin-right: 0;
  }
}

#menu-info {

  font-size: 2rem;
  display: flex;
  gap: 1rem;
  margin-top: 2rem;
  list-style-type: none;
  position: absolute;
  top: 44rem;
  left: 35rem;
}

.menu-info-item {

  background-color: rgba(252, 207, 85, 0.8);
  border: 2px solid orangered;
  border-radius: 10%;
  width: 15rem;
  height: 5rem;
}

/*** FAQ PAGE *****************************************/
#faq-container {
  margin-top: 5rem;
  --bs-bg-opacity: .7;
  height: 40rem;
  border-radius: 5%;
}

@media screen and (max-width:624px) {
  #faq-container {
    height: 65rem;
  }
}

/*** END FAQ PAGE *************************************/

